[gd_scene load_steps=4 format=4 uid="uid://bmvk7h58xh1i0"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_be3ex"]
[ext_resource type="TileSet" uid="uid://blxtyyndd4mjf" path="res://assets/tileset.tres" id="1_kbest"]
[ext_resource type="PackedScene" uid="uid://bdvt7amqhykja" path="res://scenes/player.tscn" id="9_yj4st"]

[node name="main" type="Node2D"]
script = ExtResource("1_be3ex")
row = 33
collumns = 24
path = "res://tilemap/outside.json"
pathobj = "res://tilemap/outsideobj.json"

[node name="backgroundLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAABAAoABAABAAEAAAABAAsABAABAAEAAAABAAwABAABAAEAAAABAA0ABAABAAEAAAABAA4ABAABAAEAAAACAAkABAABAAEAAAACAAoABAABAAEAAAACAA4ABAABAAEAAAADAAcABAABAAEAAAADAAgABAABAAEAAAADAAkABAABAAEAAAADAA4ABAABAAEAAAAEAAcABAABAAEAAAAEAAwABAABAAEAAAAEAA0ABAABAAEAAAAEAA4ABAABAAEAAAAFAAcABAABAAEAAAAFAAwABAABAAEAAAAFABEABAAAAAMAAAAFABIABAAAAAMAAAAFABMABAAAAAMAAAAFABQABAAAAAMAAAAFABUABAAAAAMAAAAGAAcABAABAAEAAAAGAAgABAABAAEAAAAGAAsABAABAAEAAAAGAAwABAABAAEAAAAGABEABAAAAAMAAAAGABUABAAAAAMAAAAGABYABAAAAAMAAAAHAAgABAABAAEAAAAHAAsABAABAAEAAAAHAAwABAABAAEAAAAHAA0ABAABAAEAAAAHAA4ABAABAAEAAAAHABEABAAAAAMAAAAHABYABAAAAAMAAAAIAAYABAABAAEAAAAIAAcABAABAAEAAAAIAAgABAABAAEAAAAIABYABAAAAAMAAAAJAAYABAABAAEAAAAJABYABAAAAAMAAAAKAAYABAABAAEAAAAKAAsABAABAAEAAAAKAAwABAABAAEAAAAKAA0ABAABAAEAAAAKAA4ABAABAAEAAAAKAA8ABAAAAAMAAAAKABAABAAAAAMAAAAKABIABAAAAAMAAAAKABMABAAAAAMAAAAKABQABAAAAAMAAAAKABYABAAAAAMAAAALAAYABAABAAEAAAALAAcABAABAAEAAAALAAgABAABAAEAAAALAAsABAABAAEAAAALAA8ABAAAAAMAAAALABIABAAAAAMAAAALABQABAAAAAMAAAALABYABAAAAAMAAAAMAAgABAABAAEAAAAMAAsABAABAAEAAAAMAA8ABAAAAAMAAAAMABIABAAAAAMAAAAMABMABAAAAAMAAAAMABQABAAAAAMAAAAMABYABAAAAAMAAAANAAgABAABAAEAAAANAAsABAABAAEAAAANAA8ABAAAAAMAAAANABYABAAAAAMAAAAOAAgABAABAAEAAAAOAAsABAABAAEAAAAOAA8ABAAAAAMAAAAOABAABAAAAAMAAAAOABUABAAAAAMAAAAOABYABAAAAAMAAAAPAAgABAABAAEAAAAPAAsABAABAAEAAAAPABAABAAAAAMAAAAPABMABAAAAAMAAAAPABQABAAAAAMAAAAPABUABAAAAAMAAAAQAAgABAABAAEAAAAQAAsABAABAAEAAAAQABAABAAAAAMAAAAQABEABAAAAAMAAAAQABIABAAAAAMAAAAQABMABAAAAAMAAAARAAgABAABAAEAAAARAAkABAABAAEAAAARAAoABAABAAEAAAARAAsABAABAAEAAAA=")
tile_set = ExtResource("1_kbest")

[node name="topLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAAAAAABAAGAAAAAAAAAAEABAAFAAQAAAAAAAIABAAFAAQAAAAAAAMABAAGAAQAAAAAAAQABAAFAAQAAAAAAAUABAAGAAQAAAAAAAYABAAFAAQAAAAAAAcABAAFAAQAAAAAAAgABAAGAAQAAAAAAAkABAAFAAQAAAAAAAoABAAFAAQAAAAAAAsABAAFAAQAAAAAAAwABAAFAAQAAAAAAA0ABAAFAAQAAAAAAA4ABAAGAAQAAAAAAA8ABAAGAAQAAAAAABAABAAGAAQAAAAAABEABAAGAAQAAAAAABIABAAFAAQAAAAAABMABAAGAAQAAAAAABQABAAGAAQAAAAAABUABAAFAAQAAAAAABYABAAGAAEAAAABAAAABAAHAAUAAAABAAEABAAEAAEAAAABAAIABAAEAAIAAAABAAMABAAEAAEAAAABAAQABAAEAAEAAAABAAUABAAEAAEAAAABAAYABAAFAAEAAAABAAcABAAEAAEAAAABAAgABAAEAAIAAAABAAkABAAEAAEAAAABAAoABAADAAMAAAABAAsABAAGAAUAAAABAAwABAAGAAUAAAABAA0ABAAGAAUAAAABAA4ABAAGAAMAAAABAA8ABAAEAAEAAAABABAABAAEAAEAAAABABEABAAEAAEAAAABABIABAAEAAEAAAABABMABAAEAAAAAAABABQABAADAAEAAAABABUABAAEAAIAAAABABYABAAHAAQAAAACAAAABAAHAAUAAAACAAEABAAEAAEAAAACAAIABAAEAAEAAAACAAMABAAEAAEAAAACAAQABAAEAAEAAAACAAUABAAEAAEAAAACAAYABAADAAEAAAACAAcABAAEAAEAAAACAAgABAAFAAEAAAACAAkABAADAAMAAAACAAoABAAHAAEAAAACAAsABAABAAAAAAACAAwABAAEAAQAAAACAA0ABAABAAEAAAACAA4ABAAHAAUAAAACAA8ABAADAAEAAAACABAABAAFAAEAAAACABEABAADAAEAAAACABIABAAEAAEAAAACABMABAAEAAAAAAACABQABAADAAEAAAACABUABAADAAEAAAACABYABAAHAAQAAAADAAAABAAHAAUAAAADAAEABAAFAAEAAAADAAIABAAEAAEAAAADAAMABAAEAAAAAAADAAQABAAEAAAAAAADAAUABAAEAAEAAAADAAYABAAEAAEAAAADAAcABAADAAMAAAADAAgABAADAAQAAAADAAkABAAFAAIAAAADAAoABAAAAAAAAAADAAsABAABAAAAAAADAAwABAABAAAAAAADAA0ABAAAAAEAAAADAA4ABAAHAAUAAAADAA8ABAAEAAEAAAADABAABAAEAAAAAAADABEABAADAAEAAAADABIABAAEAAEAAAADABMABAAFAAEAAAADABQABAAEAAEAAAADABUABAAEAAEAAAADABYABAAHAAQAAAAEAAAABAAHAAUAAAAEAAEABAAFAAEAAAAEAAIABAAEAAIAAAAEAAMABAAEAAEAAAAEAAQABAAEAAEAAAAEAAUABAAFAAEAAAAEAAYABAADAAEAAAAEAAcABAAHAAQAAAAEAAgABAAEAAQAAAAEAAkABAAAAAEAAAAEAAoABAAAAAEAAAAEAAsABAAEAAQAAAAEAAwABAADAAAAAAAEAA0ABAAGAAQAAAAEAA4ABAAHAAMAAAAEAA8ABAAEAAEAAAAEABAABAAEAAAAAAAEABEABAAFAAEAAAAEABIABAAEAAEAAAAEABMABAAEAAEAAAAEABQABAAEAAEAAAAEABUABAAFAAEAAAAEABYABAAHAAIAAAAEABcABAAGAAEAAAAFAAAABAAHAAUAAAAFAAEABAADAAEAAAAFAAIABAAEAAAAAAAFAAMABAAEAAEAAAAFAAQABAAEAAEAAAAFAAUABAAEAAAAAAAFAAYABAAEAAEAAAAFAAcABAAHAAQAAAAFAAgABAABAAEAAAAFAAkABAAAAAEAAAAFAAoABAAEAAQAAAAFAAsABAAAAAEAAAAFAAwABAAHAAUAAAAFAA0ABAAEAAEAAAAFAA4ABAAEAAEAAAAFAA8ABAAEAAEAAAAFABAABAAEAAEAAAAFABEABAADAAMAAAAFABIABAAGAAUAAAAFABMABAADAAQAAAAFABQABAAGAAUAAAAFABUABAADAAUAAAAFABYABAAEAAAAAAAFABcABAAHAAIAAAAFABgABAAGAAEAAAAGAAAABAAHAAUAAAAGAAEABAAEAAEAAAAGAAIABAAEAAEAAAAGAAMABAAEAAEAAAAGAAQABAAEAAEAAAAGAAUABAAEAAEAAAAGAAYABAAEAAEAAAAGAAcABAAHAAIAAAAGAAgABAAGAAEAAAAGAAkABAAEAAQAAAAGAAoABAAEAAQAAAAGAAsABAADAAAAAAAGAAwABAAHAAMAAAAGAA0ABAAEAAEAAAAGAA4ABAAEAAEAAAAGAA8ABAAEAAEAAAAGABAABAAEAAEAAAAGABEABAAHAAQAAAAGABUABAAFAAAAAAAGABYABAADAAUAAAAGABcABAAEAAEAAAAGABgABAAHAAQAAAAHAAAABAAHAAUAAAAHAAEABAAEAAEAAAAHAAIABAAEAAEAAAAHAAMABAAEAAAAAAAHAAQABAAEAAEAAAAHAAUABAAEAAAAAAAHAAYABAADAAEAAAAHAAcABAAFAAEAAAAHAAgABAAHAAQAAAAHAAkABAAAAAAAAAAHAAoABAAAAAAAAAAHAAsABAAFAAAAAAAHAAwABAAGAAUAAAAHAA0ABAAGAAUAAAAHAA4ABAAGAAUAAAAHAA8ABAAEAAEAAAAHABAABAAEAAEAAAAHABEABAAEAAMAAAAHABYABAAHAAUAAAAHABcABAAEAAIAAAAHABgABAAEAAMAAAAIAAAABAAHAAUAAAAIAAEABAAEAAEAAAAIAAIABAAEAAEAAAAIAAMABAAEAAEAAAAIAAQABAAEAAEAAAAIAAUABAAFAAEAAAAIAAYABAADAAMAAAAIAAcABAAGAAUAAAAIAAgABAAFAAIAAAAIAAkABAABAAEAAAAIAAoABAABAAAAAAAIAAsABAAAAAAAAAAIAAwABAAAAAAAAAAIAA0ABAAAAAAAAAAIAA4ABAAAAAAAAAAIAA8ABAACAAAAAAAIABAABAACAAAAAAAIABEABAACAAAAAAAIABIABAACAAAAAAAIABMABAACAAAAAAAIABQABAACAAAAAAAIABUABAACAAAAAAAIABYABAAHAAUAAAAIABcABAAEAAEAAAAIABgABAAHAAQAAAAJAAAABAAEAAUAAAAJAAEABAAEAAIAAAAJAAIABAAEAAEAAAAJAAMABAAEAAEAAAAJAAQABAAEAAEAAAAJAAUABAAEAAEAAAAJAAYABAAEAAMAAAAJAAcABAAAAAEAAAAJAAgABAAAAAAAAAAJAAkABAAEAAQAAAAJAAoABAAAAAAAAAAJAAsABAAAAAAAAAAJAAwABAAAAAAAAAAJAA0ABAAAAAAAAAAJAA4ABAAAAAAAAAAJAA8ABAACAAAAAAAJABAABAACAAAAAAAJABEABAACAAAAAAAJABIABAACAAAAAAAJABMABAACAAAAAAAJABQABAACAAAAAAAJABUABAACAAAAAAAJABYABAAEAAUAAAAJABcABAAEAAEAAAAJABgABAAHAAQAAAAKAAAABAAHAAUAAAAKAAEABAADAAEAAAAKAAIABAAEAAEAAAAKAAMABAAEAAAAAAAKAAQABAAEAAAAAAAKAAUABAAEAAEAAAAKAAYABAAHAAQAAAAKAAcABAABAAAAAAAKAAgABAABAAEAAAAKAAkABAABAAAAAAAKAAoABAAAAAAAAAAKAAsABAAGAAAAAAAKAAwABAAGAAQAAAAKAA0ABAAGAAQAAAAKAA4ABAAGAAQAAAAKAA8ABAADAAMAAAAKABAABAAHAAEAAAAKABIABAAGAAAAAAAKABMABAAGAAQAAAAKABQABAADAAIAAAAKABYABAAHAAUAAAAKABcABAAEAAEAAAAKABgABAAEAAMAAAALAAAABAAHAAUAAAALAAEABAAEAAEAAAALAAIABAAFAAEAAAALAAMABAAEAAEAAAALAAQABAAEAAEAAAALAAUABAADAAEAAAALAAYABAAHAAIAAAALAAcABAAFAAQAAAALAAgABAAGAAEAAAALAAkABAAAAAEAAAALAAoABAAAAAAAAAALAAsABAAHAAUAAAALAAwABAAFAAEAAAALAA0ABAAEAAEAAAALAA4ABAAEAAEAAAALAA8ABAAHAAQAAAALABIABAAEAAUAAAALABMABAAEAAEAAAALABQABAAHAAQAAAALABYABAAHAAUAAAALABcABAAEAAEAAAALABgABAAHAAQAAAAMAAAABAAHAAUAAAAMAAEABAAFAAEAAAAMAAIABAAEAAEAAAAMAAMABAAEAAAAAAAMAAQABAAEAAEAAAAMAAUABAAEAAEAAAAMAAYABAAEAAEAAAAMAAcABAAEAAEAAAAMAAgABAAHAAQAAAAMAAkABAABAAAAAAAMAAoABAAAAAAAAAAMAAsABAAEAAUAAAAMAAwABAAEAAEAAAAMAA0ABAAEAAEAAAAMAA4ABAADAAEAAAAMAA8ABAAHAAQAAAAMABIABAAHAAAAAAAMABMABAADAAQAAAAMABQABAAFAAIAAAAMABYABAAHAAUAAAAMABcABAAEAAEAAAAMABgABAAHAAQAAAANAAAABAAEAAUAAAANAAEABAAEAAIAAAANAAIABAAEAAAAAAANAAMABAAEAAEAAAANAAQABAADAAEAAAANAAUABAAEAAEAAAANAAYABAAEAAEAAAANAAcABAAEAAEAAAANAAgABAAHAAQAAAANAAkABAAEAAQAAAANAAoABAABAAEAAAANAAsABAAHAAUAAAANAAwABAAFAAEAAAANAA0ABAADAAEAAAANAA4ABAADAAEAAAANAA8ABAAHAAQAAAANABYABAAHAAUAAAANABcABAAFAAEAAAANABgABAAHAAQAAAAOAAAABAAHAAUAAAAOAAEABAAEAAEAAAAOAAIABAAEAAEAAAAOAAMABAAEAAEAAAAOAAQABAAEAAAAAAAOAAUABAAEAAIAAAAOAAYABAAEAAEAAAAOAAcABAAEAAEAAAAOAAgABAAHAAQAAAAOAAkABAABAAEAAAAOAAoABAAAAAAAAAAOAAsABAAEAAUAAAAOAAwABAAEAAEAAAAOAA0ABAAEAAEAAAAOAA4ABAAEAAEAAAAOAA8ABAAHAAIAAAAOABAABAAGAAEAAAAOABUABAAGAAAAAAAOABYABAAHAAMAAAAOABcABAAEAAIAAAAOABgABAAHAAQAAAAPAAAABAAHAAUAAAAPAAEABAAEAAEAAAAPAAIABAAEAAAAAAAPAAMABAAFAAEAAAAPAAQABAAEAAIAAAAPAAUABAAEAAEAAAAPAAYABAAFAAEAAAAPAAcABAAEAAEAAAAPAAgABAAHAAQAAAAPAAkABAAAAAAAAAAPAAoABAAEAAQAAAAPAAsABAAEAAUAAAAPAAwABAAEAAEAAAAPAA0ABAAEAAEAAAAPAA4ABAAEAAEAAAAPAA8ABAAFAAEAAAAPABAABAAEAAMAAAAPABMABAAGAAAAAAAPABQABAAGAAQAAAAPABUABAAFAAUAAAAPABYABAADAAEAAAAPABcABAAEAAEAAAAPABgABAAHAAQAAAAQAAAABAAEAAUAAAAQAAEABAAEAAEAAAAQAAIABAAEAAEAAAAQAAMABAAEAAEAAAAQAAQABAAEAAIAAAAQAAUABAADAAEAAAAQAAYABAAEAAEAAAAQAAcABAAFAAEAAAAQAAgABAAHAAQAAAAQAAkABAAEAAQAAAAQAAoABAAEAAQAAAAQAAsABAAHAAUAAAAQAAwABAAEAAEAAAAQAA0ABAADAAEAAAAQAA4ABAAEAAEAAAAQAA8ABAAEAAEAAAAQABAABAAFAAMAAAAQABEABAAFAAQAAAAQABIABAAGAAQAAAAQABMABAAHAAMAAAAQABQABAAEAAEAAAAQABUABAADAAEAAAAQABYABAAHAAMAAAAQABcABAAEAAEAAAAQABgABAAHAAQAAAARAAAABAAHAAUAAAARAAEABAAEAAEAAAARAAIABAAEAAAAAAARAAMABAAEAAEAAAARAAQABAAEAAEAAAARAAUABAAEAAEAAAARAAYABAAEAAIAAAARAAcABAAEAAEAAAARAAgABAAHAAIAAAARAAkABAAGAAQAAAARAAoABAAGAAQAAAARAAsABAAFAAUAAAARAAwABAADAAEAAAARAA0ABAAEAAEAAAARAA4ABAAEAAIAAAARAA8ABAAEAAEAAAARABAABAAEAAEAAAARABEABAAEAAIAAAARABIABAAFAAEAAAARABMABAADAAEAAAARABQABAADAAEAAAARABUABAAEAAAAAAARABYABAAEAAEAAAARABcABAADAAMAAAARABgABAAHAAEAAAASAAAABAAHAAUAAAASAAEABAAEAAEAAAASAAIABAAEAAEAAAASAAMABAAEAAAAAAASAAQABAAEAAAAAAASAAUABAAEAAAAAAASAAYABAAEAAEAAAASAAcABAAEAAIAAAASAAgABAAEAAEAAAASAAkABAAEAAEAAAASAAoABAAEAAEAAAASAAsABAAEAAEAAAASAAwABAAEAAIAAAASAA0ABAAEAAEAAAASAA4ABAAEAAEAAAASAA8ABAAEAAEAAAASABAABAAEAAAAAAASABEABAAEAAAAAAASABIABAAEAAAAAAASABMABAAEAAIAAAASABQABAAEAAEAAAASABUABAAFAAEAAAASABYABAADAAMAAAASABcABAAHAAEAAAATAAAABAAEAAUAAAATAAEABAAEAAIAAAATAAIABAAEAAEAAAATAAMABAAEAAEAAAATAAQABAAEAAEAAAATAAUABAAFAAEAAAATAAYABAAEAAEAAAATAAcABAAEAAEAAAATAAgABAAFAAEAAAATAAkABAAEAAEAAAATAAoABAAEAAEAAAATAAsABAAEAAIAAAATAAwABAAEAAEAAAATAA0ABAAEAAEAAAATAA4ABAADAAEAAAATAA8ABAAFAAEAAAATABAABAAEAAEAAAATABEABAAEAAEAAAATABIABAAEAAEAAAATABMABAAEAAEAAAATABQABAAEAAAAAAATABUABAAEAAIAAAATABYABAAEAAMAAAAUAAAABAAHAAUAAAAUAAEABAAFAAEAAAAUAAIABAADAAEAAAAUAAMABAAEAAIAAAAUAAQABAAEAAEAAAAUAAUABAAFAAEAAAAUAAYABAAEAAAAAAAUAAcABAAEAAEAAAAUAAgABAAEAAEAAAAUAAkABAAEAAIAAAAUAAoABAAEAAIAAAAUAAsABAAFAAEAAAAUAAwABAADAAEAAAAUAA0ABAAEAAIAAAAUAA4ABAAEAAAAAAAUAA8ABAAFAAEAAAAUABAABAAEAAEAAAAUABEABAAEAAEAAAAUABIABAAEAAEAAAAUABMABAAEAAEAAAAUABQABAAEAAIAAAAUABUABAAEAAEAAAAUABYABAAHAAQAAAAVAAAABAAHAAUAAAAVAAEABAAEAAEAAAAVAAIABAAEAAEAAAAVAAMABAAEAAEAAAAVAAQABAADAAEAAAAVAAUABAAEAAEAAAAVAAYABAADAAEAAAAVAAcABAAEAAEAAAAVAAgABAAEAAEAAAAVAAkABAAFAAEAAAAVAAoABAADAAEAAAAVAAsABAAEAAEAAAAVAAwABAAEAAAAAAAVAA0ABAAEAAIAAAAVAA4ABAAEAAEAAAAVAA8ABAAEAAIAAAAVABAABAAEAAEAAAAVABEABAAFAAEAAAAVABIABAAFAAEAAAAVABMABAADAAEAAAAVABQABAAFAAEAAAAVABUABAAEAAAAAAAVABYABAAHAAQAAAAWAAAABAAHAAUAAAAWAAEABAAEAAEAAAAWAAIABAAEAAEAAAAWAAMABAAEAAEAAAAWAAQABAAEAAAAAAAWAAUABAAFAAEAAAAWAAYABAAEAAIAAAAWAAcABAAEAAEAAAAWAAgABAAEAAEAAAAWAAkABAAEAAEAAAAWAAoABAADAAEAAAAWAAsABAAEAAEAAAAWAAwABAAEAAEAAAAWAA0ABAAEAAEAAAAWAA4ABAAEAAAAAAAWAA8ABAAEAAEAAAAWABAABAAEAAAAAAAWABEABAADAAEAAAAWABIABAAEAAEAAAAWABMABAAEAAEAAAAWABQABAAEAAAAAAAWABUABAAEAAEAAAAWABYABAAHAAQAAAAXAAAABAAHAAUAAAAXAAEABAAEAAEAAAAXAAIABAAEAAEAAAAXAAMABAAEAAEAAAAXAAQABAAEAAIAAAAXAAUABAAEAAEAAAAXAAYABAAEAAEAAAAXAAcABAAEAAEAAAAXAAgABAAFAAEAAAAXAAkABAAEAAEAAAAXAAoABAADAAEAAAAXAAsABAAEAAIAAAAXAAwABAADAAEAAAAXAA0ABAAEAAAAAAAXAA4ABAAEAAEAAAAXAA8ABAAEAAEAAAAXABAABAAEAAEAAAAXABEABAAEAAEAAAAXABIABAAEAAEAAAAXABMABAAEAAAAAAAXABQABAAEAAEAAAAXABUABAAEAAIAAAAXABYABAAEAAMAAAAYAAAABAAHAAUAAAAYAAEABAADAAEAAAAYAAIABAAEAAEAAAAYAAMABAAEAAEAAAAYAAQABAAEAAAAAAAYAAUABAAEAAEAAAAYAAYABAAEAAEAAAAYAAcABAAEAAEAAAAYAAgABAAEAAEAAAAYAAkABAAEAAAAAAAYAAoABAAEAAEAAAAYAAsABAAEAAEAAAAYAAwABAAEAAEAAAAYAA0ABAAEAAEAAAAYAA4ABAAEAAEAAAAYAA8ABAADAAEAAAAYABAABAAEAAEAAAAYABEABAAEAAAAAAAYABIABAAEAAEAAAAYABMABAAEAAEAAAAYABQABAAEAAEAAAAYABUABAAEAAAAAAAYABYABAAHAAQAAAAZAAAABAAEAAUAAAAZAAEABAAEAAEAAAAZAAIABAAEAAEAAAAZAAMABAAFAAEAAAAZAAQABAAEAAEAAAAZAAUABAAEAAEAAAAZAAYABAAEAAEAAAAZAAcABAAEAAEAAAAZAAgABAAEAAEAAAAZAAkABAAEAAIAAAAZAAoABAAEAAEAAAAZAAsABAAEAAAAAAAZAAwABAAEAAEAAAAZAA0ABAAEAAIAAAAZAA4ABAAEAAEAAAAZAA8ABAAEAAEAAAAZABAABAAEAAEAAAAZABEABAAFAAEAAAAZABIABAAEAAEAAAAZABMABAAEAAEAAAAZABQABAAEAAAAAAAZABUABAAEAAEAAAAZABYABAAHAAQAAAAaAAAABAAHAAUAAAAaAAEABAAEAAAAAAAaAAIABAAEAAEAAAAaAAMABAAEAAEAAAAaAAQABAAEAAEAAAAaAAUABAAEAAEAAAAaAAYABAAEAAEAAAAaAAcABAAEAAEAAAAaAAgABAAEAAEAAAAaAAkABAAEAAAAAAAaAAoABAAEAAEAAAAaAAsABAAEAAEAAAAaAAwABAAEAAAAAAAaAA0ABAAEAAEAAAAaAA4ABAAEAAEAAAAaAA8ABAAEAAIAAAAaABAABAAEAAIAAAAaABEABAAEAAEAAAAaABIABAADAAEAAAAaABMABAAEAAIAAAAaABQABAAEAAEAAAAaABUABAAFAAEAAAAaABYABAAHAAQAAAAbAAAABAAHAAUAAAAbAAEABAAEAAAAAAAbAAIABAAFAAEAAAAbAAMABAAEAAAAAAAbAAQABAADAAEAAAAbAAUABAAEAAEAAAAbAAYABAAEAAEAAAAbAAcABAAEAAEAAAAbAAgABAAEAAEAAAAbAAkABAAEAAEAAAAbAAoABAAFAAEAAAAbAAsABAAEAAEAAAAbAAwABAAEAAEAAAAbAA0ABAADAAEAAAAbAA4ABAAEAAEAAAAbAA8ABAADAAEAAAAbABAABAADAAEAAAAbABEABAAFAAEAAAAbABIABAAFAAEAAAAbABMABAAEAAEAAAAbABQABAAEAAIAAAAbABUABAAEAAIAAAAbABYABAAHAAQAAAAcAAAABAAHAAUAAAAcAAEABAAEAAEAAAAcAAIABAAEAAIAAAAcAAMABAAEAAEAAAAcAAQABAAFAAEAAAAcAAUABAAFAAEAAAAcAAYABAAEAAEAAAAcAAcABAAEAAEAAAAcAAgABAAEAAEAAAAcAAkABAAEAAEAAAAcAAoABAADAAEAAAAcAAsABAAEAAIAAAAcAAwABAAEAAEAAAAcAA0ABAAEAAEAAAAcAA4ABAAEAAEAAAAcAA8ABAAEAAEAAAAcABAABAAEAAEAAAAcABEABAAEAAEAAAAcABIABAAEAAEAAAAcABMABAAEAAIAAAAcABQABAAEAAEAAAAcABUABAAEAAEAAAAcABYABAAHAAQAAAAdAAAABAAHAAUAAAAdAAEABAAEAAEAAAAdAAIABAAFAAEAAAAdAAMABAAEAAEAAAAdAAQABAAEAAEAAAAdAAUABAADAAEAAAAdAAYABAAEAAAAAAAdAAcABAAEAAEAAAAdAAgABAAFAAEAAAAdAAkABAAEAAEAAAAdAAoABAAEAAEAAAAdAAsABAAEAAEAAAAdAAwABAAEAAEAAAAdAA0ABAADAAEAAAAdAA4ABAAFAAEAAAAdAA8ABAAEAAEAAAAdABAABAAEAAEAAAAdABEABAAFAAEAAAAdABIABAAEAAEAAAAdABMABAAFAAEAAAAdABQABAAEAAIAAAAdABUABAAEAAEAAAAdABYABAAHAAQAAAAeAAAABAAEAAUAAAAeAAEABAAEAAEAAAAeAAIABAADAAEAAAAeAAMABAAFAAEAAAAeAAQABAAEAAEAAAAeAAUABAAEAAEAAAAeAAYABAAEAAEAAAAeAAcABAAEAAEAAAAeAAgABAAEAAEAAAAeAAkABAAEAAIAAAAeAAoABAAEAAIAAAAeAAsABAAFAAEAAAAeAAwABAAEAAEAAAAeAA0ABAADAAEAAAAeAA4ABAAFAAEAAAAeAA8ABAAEAAEAAAAeABAABAAEAAEAAAAeABEABAAEAAEAAAAeABIABAAFAAEAAAAeABMABAAEAAEAAAAeABQABAAEAAEAAAAeABUABAAFAAEAAAAeABYABAAHAAQAAAAfAAAABAAHAAUAAAAfAAEABAADAAEAAAAfAAIABAAFAAEAAAAfAAMABAAEAAEAAAAfAAQABAAEAAEAAAAfAAUABAAEAAEAAAAfAAYABAAEAAAAAAAfAAcABAAEAAEAAAAfAAgABAAEAAEAAAAfAAkABAAEAAEAAAAfAAoABAAFAAEAAAAfAAsABAAEAAEAAAAfAAwABAAEAAEAAAAfAA0ABAAEAAEAAAAfAA4ABAAEAAEAAAAfAA8ABAAEAAEAAAAfABAABAAEAAEAAAAfABEABAAEAAEAAAAfABIABAAEAAAAAAAfABMABAAEAAAAAAAfABQABAAEAAEAAAAfABUABAADAAEAAAAfABYABAAHAAQAAAAgAAAABAAEAAUAAAAgAAEABAAEAAEAAAAgAAIABAAEAAEAAAAgAAMABAAEAAAAAAAgAAQABAADAAEAAAAgAAUABAAEAAEAAAAgAAYABAADAAEAAAAgAAcABAAEAAEAAAAgAAgABAAFAAEAAAAgAAkABAAEAAAAAAAgAAoABAAEAAEAAAAgAAsABAAEAAEAAAAgAAwABAAEAAEAAAAgAA0ABAADAAEAAAAgAA4ABAAEAAEAAAAgAA8ABAAEAAEAAAAgABAABAAEAAAAAAAgABEABAAEAAEAAAAgABIABAAEAAEAAAAgABMABAADAAEAAAAgABQABAAFAAEAAAAgABUABAAEAAEAAAAgABYABAAEAAMAAAAhAAAABAAHAAAAAAAhAAEABAAGAAUAAAAhAAIABAAGAAUAAAAhAAMABAAGAAUAAAAhAAQABAAGAAUAAAAhAAUABAADAAQAAAAhAAYABAAGAAUAAAAhAAcABAAGAAUAAAAhAAgABAAGAAUAAAAhAAkABAAGAAUAAAAhAAoABAADAAQAAAAhAAsABAADAAQAAAAhAAwABAAGAAUAAAAhAA0ABAAGAAUAAAAhAA4ABAAGAAUAAAAhAA8ABAAGAAUAAAAhABAABAAGAAUAAAAhABEABAAGAAUAAAAhABIABAADAAQAAAAhABMABAAGAAUAAAAhABQABAADAAQAAAAhABUABAAGAAUAAAAhABYABAAHAAEAAAA=")
tile_set = ExtResource("1_kbest")

[node name="collisionLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAACAAwABAAAAAIAAAAFAAkABAAAAAIAAAAGABIABAAAAAMAAAAGABMABAAAAAMAAAAGABQABAAAAAMAAAAHABIABAAAAAMAAAAHABMABAAAAAMAAAAHABQABAAAAAMAAAAHABUABAAAAAMAAAAIAA0ABAAAAAIAAAAKABEABAAAAAMAAAAKABUABAAAAAMAAAALABAABAAAAAMAAAALABEABAAAAAMAAAALABUABAAAAAMAAAAMABAABAAAAAMAAAAMABEABAAAAAMAAAAMABUABAAAAAMAAAANAAkABAAAAAIAAAANABAABAAAAAMAAAANABEABAAAAAMAAAANABIABAAAAAMAAAANABMABAAAAAMAAAANABQABAAAAAMAAAANABUABAAAAAMAAAAOABEABAAAAAMAAAAOABIABAAAAAMAAAAOABMABAAAAAMAAAAOABQABAAAAAMAAAAPABEABAAAAAMAAAAPABIABAAAAAMAAAA=")
tile_set = ExtResource("1_kbest")

[node name="Player" parent="." instance=ExtResource("9_yj4st")]
position = Vector2(279, 570)

[node name="obj" type="Node2D" parent="."]
